<resources>
    <string name="app_name">Tele Mentary</string>
    <string name="suspnd">Suspend</string>
    <string name="title_dialog_disclaimer">Disclaimer</string>
    <string name="body_dialog_disclaimer">To use Suspend  or Unsuspend features this app utilizes adb at port 5555 so be sure to run "adb tcpip 5555" from your computer</string>
    <string name="unsuspnd">Unsuspend</string>
    <string name="uninstall">Delete</string>
    <string name="appname">App Name</string>
    <string name="appadd">package Address</string>
    <string name="app_icon">App Icon</string>
    <string name="play_str">Open Play Store</string>
    <string name="app_size">App Size</string>
</resources>